ingress/2backupingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"ingress-arip","namespace":"wordpress"},"spec":{"ingressClassName":"nginx","rules":[{"host":"nginx.arip","http":{"paths":[{"backend":{"service":{"name":"nginx","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"apache.arip","http":{"paths":[{"backend":{"service":{"name":"apache","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}, [...]
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2022-10-18T20:21:02Z"
    generation: 2
    name: ingress-arip
    namespace: wordpress
    resourceVersion: "1220269"
    uid: da9736d9-8a35-46b6-aa04-023174e72b9c
  spec:
    ingressClassName: nginx
    rules:
    - host: nginx.arip
      http:
        paths:
        - backend:
            service:
              name: nginx
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: apache.arip
      http:
        paths:
        - backend:
            service:
              name: apache
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: wordpress.arip
      http:
        paths:
        - backend:
            service:
              name: wordpress
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.8.60.229
kind: List
metadata:
  resourceVersion: ""
