ingress/backupingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"ingress-arip","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"nginx.arip","http":{"paths":[{"backend":{"service":{"name":"nginx","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"host":"apache.arip","http":{"paths":[{"backend":{"service":{"name":"apache","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}},{"ho [...]
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2022-10-18T18:22:17Z"
  generation: 8
  name: ingress-arip
  namespace: default
  resourceVersion: "1219915"
  uid: 25293609-183e-4101-91ff-d146f87d6e69
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.arip
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: apache.arip
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: wordpress-db.arip
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.8.60.229
